# django-journal-website

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  readme.md
website/: db.sqlite3
website/journal_website/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
website/journal_website/database/: db.sqlite3
website/journal_website/handlers/: FormHandler.py  RequestHandler.py
website/journal_website/managers/: ArticleManager.py  FileManager.py  __init__.py  article_manager.py  file_manager.py
website/journal_website/migrations/: 0001_initial.py  0002_alter_article_category_alter_article_user_and_more.py  0002_userpersonaldata_alter_article_user_delete_user.py  0003_alter_userpersonaldata_options.py  0004_remove_userpersonaldata_email_and_more.py  0005_remove_userpersonaldata_nickname.py  0006_useradditionaldata_delete_userpersonaldata.py  0007_remove_useradditionaldata_code_and_more.py  0008_useradditionaldata_code.py
website/journal_website/repositories/: ArticleRepository.py  CategoryRepository.py  FeedbackRepository.py  ScientificPublicationRepository.py  StringRepository.py  UserAdditionalDataRepository.py  UserRepository.py  VolumeRepository.py  __init__.py  article_repository.py  category_repository.py  feedback_repository.py  scientific_publication_repository.py  string_repository.py  user_additional_data_repository.py  user_repository.py  volume_repository.py
website/journal_website/services/: EmailService.py  email.py
website/website/: __init__.py  celery.py  settings.py  urls.py
(+37 files in other folders)
